@@ -1,4 +1,8 @@
 2004-06-28  Alexander Malysh  <a.malysh@centrium.de> 
+    * gw/dlr_mem.c: fixed locking issues. Don't use 'list_[lock|unlock]', use
+      rwlock instead.
+
+2004-06-28  Alexander Malysh  <a.malysh@centrium.de> 
     * gw/bearerbox.h, gw/bb_boxc.c: moved declaration for 'route_incoming_to_boxc' from
       gw/bb_boxc.c to gw/bearerbox.h.
 
